# opengl_tutorial

./: .gitignore  CMakeLists.txt  README.md  build.sh  debug.sh  glslprogram.cpp  glslprogram.h  main.cpp  release.sh
assets/: basic_lighting.frag  basic_lighting.vert  fragment.frag  lightShader.frag  light_Cube.frag  vertex.vert
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: CMakeLists.txt
